fixed : [font color] excerpt font color not accessible => too low constrast ratio. fixes #948

--- a/assets/front/css/_parts/0_5_single_post_page.css
+++ b/assets/front/css/_parts/0_5_single_post_page.css
@@ -116,7 +116,7 @@ z-index:2;
 .post-title a { color: #444; }
 .post-title a:hover { color: #16cfc1; }
 
-.entry.excerpt { font-size: 1em; color: #aaa; }
+.entry.excerpt { font-size: 1em; color: #767676; }
 .entry.excerpt p { margin-bottom: 0; }
 
 /*  post : standard loop
